--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <title>Tính tiền dịch vụ xe Honda</title>
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <script type="module" src="Booking.js"></script>
     <script src="https://kit.fontawesome.com/ab2155e76b.js" crossorigin="anonymous"></script>
+    <script type="module">
+        import { booking } from './Booking.js';
+      
+        document.getElementById('book-btn').addEventListener('click', booking);
+      </script>
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="App.css" rel="stylesheet" />
 </head>
@@ -37,7 +41,7 @@
 
             <div class="col-xs-offset-2 col-xs-10">
                 <button class="btn btn-info btn-lg " onclick="calcRoute();"><i class="fas fa-map-signs"></i></button>
-				<button class="btn btn-info btn-lg " onclick="booking();">Book</button>
+				<button class="btn btn-info btn-lg " id="book-btn">Book</button>
             </div>
 			
         </div>
